[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/scripts/ScreenGameOver.gd" type="Script" id=1]
[ext_resource path="res://src/actors/WorldTileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/ui/home.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Run.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/images/ui/reload.png" type="Texture" id=6]
[ext_resource path="res://assets/font/Overpass-Regular_40.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/images/ui/leaderboards.png" type="Texture" id=8]
[ext_resource path="res://src/actors/FadeTransition.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/images/ui/information.png" type="Texture" id=11]
[ext_resource path="res://assets/font/Overpass-Bold_24.tres" type="DynamicFont" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 208, 304 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldTileMap" parent="." instance=ExtResource( 2 )]

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -96.0
margin_right = 72.0
margin_bottom = -34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Node2D" parent="Control"]

[node name="Player" parent="Control" instance=ExtResource( 10 )]
position = Vector2( 16, 24 )

[node name="AreaJump" type="Area2D" parent="Control"]
position = Vector2( 16, 38 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/AreaJump"]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="Control"]

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 4 )
text = "TITLE_SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -104.0
margin_right = 176.0
margin_bottom = -64.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievements" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 64.0
margin_right = -64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="Name"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 19.0
margin_right = 72.0
margin_bottom = 67.0
rect_min_size = Vector2( 192, 48 )
max_length = 16
clear_button_enabled = true
placeholder_text = "ENTRY_PSEUDO"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameButton" type="Button" parent="Name"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 72.0
margin_top = 19.0
margin_right = 120.0
margin_bottom = 67.0
rect_min_size = Vector2( 48, 48 )
text = "BUTTON_OK"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
visible = false
margin_left = 48.0
margin_top = 320.0
margin_right = 368.0
margin_bottom = 504.0

[node name="RestartButton" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_right = 30.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 6 )
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -56.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsToggleButton" type="Button" parent="Buttons/HBoxContainer"]
margin_left = 28.0
margin_right = 90.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 11 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="Buttons/HBoxContainer"]
margin_left = 130.0
margin_right = 192.0
margin_bottom = 56.0
rect_min_size = Vector2( 60, 54 )
mouse_default_cursor_shape = 2
icon = ExtResource( 3 )
flat = true

[node name="HighscoreButton" type="Button" parent="Buttons/HBoxContainer"]
margin_left = 232.0
margin_right = 292.0
margin_bottom = 56.0
rect_min_size = Vector2( 60, 54 )
mouse_default_cursor_shape = 2
icon = ExtResource( 8 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPopup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -176.0
margin_right = 144.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="StatsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="StatsPopup"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 12 )
text = "LABEL_STATS_POPUP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="ScrollContainer" parent="StatsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 64.0
margin_right = -24.0
margin_bottom = -64.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="StatsPopup/Container"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="PopupCloseButton" type="Button" parent="StatsPopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -48.0
margin_right = 72.0
margin_bottom = -8.0
text = "BUTTON_OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipAnimationButton" type="TouchScreenButton" parent="."]
shape = SubResource( 2 )

[node name="FadeTransition" parent="." instance=ExtResource( 9 )]
[connection signal="body_entered" from="Control/AreaJump" to="." method="_on_AreaJump_body_entered"]
[connection signal="timeout" from="Control/SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="gui_input" from="Name/NameEdit" to="." method="_on_NameEdit_gui_input"]
[connection signal="pressed" from="Name/NameButton" to="." method="_on_NameButton_pressed"]
[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/StatsToggleButton" to="." method="_on_StatsToggleButton_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/HighscoreButton" to="." method="_on_HighscoreButton_pressed"]
[connection signal="pressed" from="StatsPopup/PopupCloseButton" to="." method="_on_PopupCloseButton_pressed"]
[connection signal="pressed" from="SkipAnimationButton" to="." method="_on_SkipAnimationButton_pressed"]
[connection signal="animation_finished" from="FadeTransition" to="." method="_on_FadeTransition_animation_finished"]
